[gd_scene load_steps=28 format=3 uid="uid://bm1oi7hlv124r"]

[ext_resource type="Script" path="res://boss.gd" id="1_kgiha"]
[ext_resource type="Texture2D" uid="uid://db77hx7wbk3fh" path="res://assets/textures/boss/tvthing.png" id="1_pstal"]
[ext_resource type="Texture2D" uid="uid://d235ryayl3l5a" path="res://assets/textures/boss/tvhands.png" id="2_at1yn"]
[ext_resource type="Texture2D" uid="uid://dxh25hpqnn2fd" path="res://assets/textures/boss/arm2.png" id="3_epk5v"]
[ext_resource type="Texture2D" uid="uid://bfftg7hep1w5u" path="res://assets/textures/boss/arm1.png" id="4_ji0jc"]

[sub_resource type="Animation" id="Animation_kj27r"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(786, 652, 262, 163), Rect2(786, 652, 262, 163), Rect2(1048, 652, 262, 163), Rect2(1310, 652, 262, 163), Rect2(1572, 652, 262, 163), Rect2(1834, 652, 262, 163), Rect2(0, 815, 262, 163), Rect2(0, 815, 262, 163), Rect2(262, 815, 262, 163), Rect2(524, 815, 262, 163), Rect2(524, 815, 262, 163), Rect2(524, 815, 262, 163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1lfe1"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(262, 652, 262, 163), Rect2(262, 652, 262, 163), Rect2(262, 652, 262, 163), Rect2(262, 652, 262, 163), Rect2(524, 652, 262, 163), Rect2(524, 652, 262, 163), Rect2(524, 652, 262, 163), Rect2(524, 652, 262, 163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_q3617"]
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(1834, 978, 262, 163), Rect2(0, 1141, 262, 163), Rect2(262, 1141, 262, 163), Rect2(1834, 978, 262, 163), Rect2(524, 1141, 262, 163), Rect2(0, 1141, 262, 163), Rect2(262, 1141, 262, 163), Rect2(1834, 978, 262, 163), Rect2(524, 1141, 262, 163), Rect2(0, 1141, 262, 163), Rect2(262, 1141, 262, 163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kejh0"]
length = 4.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 262, 163), Rect2(262, 0, 262, 163), Rect2(524, 0, 262, 163), Rect2(786, 0, 262, 163), Rect2(1048, 0, 262, 163), Rect2(1310, 0, 262, 163), Rect2(1572, 0, 262, 163), Rect2(1834, 0, 262, 163), Rect2(0, 163, 262, 163), Rect2(262, 163, 262, 163), Rect2(524, 163, 262, 163), Rect2(786, 163, 262, 163), Rect2(1048, 163, 262, 163), Rect2(1048, 163, 262, 163), Rect2(1048, 163, 262, 163), Rect2(1048, 163, 262, 163), Rect2(1310, 163, 262, 163), Rect2(1572, 163, 262, 163), Rect2(1572, 163, 262, 163), Rect2(1834, 163, 262, 163), Rect2(0, 326, 262, 163), Rect2(262, 326, 262, 163), Rect2(524, 326, 262, 163), Rect2(786, 326, 262, 163), Rect2(786, 326, 262, 163), Rect2(786, 326, 262, 163), Rect2(786, 326, 262, 163), Rect2(1048, 326, 262, 163), Rect2(1310, 326, 262, 163), Rect2(1572, 326, 262, 163), Rect2(1834, 326, 262, 163), Rect2(0, 489, 262, 163), Rect2(0, 489, 262, 163), Rect2(262, 489, 262, 163), Rect2(262, 489, 262, 163), Rect2(0, 489, 262, 163), Rect2(0, 489, 262, 163), Rect2(524, 489, 262, 163), Rect2(524, 489, 262, 163), Rect2(786, 489, 262, 163), Rect2(1048, 489, 262, 163), Rect2(1048, 489, 262, 163), Rect2(1310, 489, 262, 163), Rect2(1572, 489, 262, 163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nmom2"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(786, 815, 262, 163), Rect2(1048, 815, 262, 163), Rect2(1310, 815, 262, 163), Rect2(1572, 815, 262, 163), Rect2(1834, 815, 262, 163), Rect2(0, 978, 262, 163), Rect2(262, 978, 262, 163), Rect2(524, 978, 262, 163), Rect2(786, 978, 262, 163), Rect2(1048, 978, 262, 163), Rect2(1310, 978, 262, 163), Rect2(1572, 978, 262, 163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7k8jl"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(1834, 489, 262, 163), Rect2(1834, 489, 262, 163), Rect2(1834, 489, 262, 163), Rect2(1834, 489, 262, 163), Rect2(0, 652, 262, 163), Rect2(0, 652, 262, 163), Rect2(0, 652, 262, 163), Rect2(0, 652, 262, 163)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8j0uy"]
_data = {
"eye": SubResource("Animation_kj27r"),
"fire": SubResource("Animation_1lfe1"),
"idle": SubResource("Animation_q3617"),
"intro": SubResource("Animation_kejh0"),
"laugh": SubResource("Animation_nmom2"),
"saw": SubResource("Animation_7k8jl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbpfx"]
size = Vector2(186, 109)

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_viafu"]
target_nodepath = NodePath("../right")
tip_nodepath = NodePath("right/Bone2D/Bone2D/Bone2D/Bone2D")
ccdik_data_chain_length = 5
joint_data/0/bone_index = 0
joint_data/0/bone2d_node = NodePath("right")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = false
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 1
joint_data/1/bone2d_node = NodePath("right/Bone2D")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = false
joint_data/1/editor_draw_gizmo = true
joint_data/2/bone_index = 2
joint_data/2/bone2d_node = NodePath("right/Bone2D/Bone2D")
joint_data/2/rotate_from_joint = false
joint_data/2/enable_constraint = false
joint_data/2/editor_draw_gizmo = true
joint_data/3/bone_index = 3
joint_data/3/bone2d_node = NodePath("right/Bone2D/Bone2D/Bone2D")
joint_data/3/rotate_from_joint = false
joint_data/3/enable_constraint = false
joint_data/3/editor_draw_gizmo = true
joint_data/4/bone_index = 4
joint_data/4/bone2d_node = NodePath("right/Bone2D/Bone2D/Bone2D/Bone2D")
joint_data/4/rotate_from_joint = false
joint_data/4/enable_constraint = true
joint_data/4/constraint_angle_min = 0.0
joint_data/4/constraint_angle_max = -360.0
joint_data/4/constraint_angle_invert = false
joint_data/4/constraint_in_localspace = true
joint_data/4/editor_draw_gizmo = true

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_jhns6"]
target_nodepath = NodePath("../left")
tip_nodepath = NodePath("left/Bone2D/Bone2D/Bone2D/Bone2D")
ccdik_data_chain_length = 5
joint_data/0/bone_index = 5
joint_data/0/bone2d_node = NodePath("left")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = false
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 6
joint_data/1/bone2d_node = NodePath("left/Bone2D")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = false
joint_data/1/editor_draw_gizmo = true
joint_data/2/bone_index = 7
joint_data/2/bone2d_node = NodePath("left/Bone2D/Bone2D")
joint_data/2/rotate_from_joint = false
joint_data/2/enable_constraint = false
joint_data/2/editor_draw_gizmo = true
joint_data/3/bone_index = 8
joint_data/3/bone2d_node = NodePath("left/Bone2D/Bone2D/Bone2D")
joint_data/3/rotate_from_joint = false
joint_data/3/enable_constraint = false
joint_data/3/editor_draw_gizmo = true
joint_data/4/bone_index = 9
joint_data/4/bone2d_node = NodePath("left/Bone2D/Bone2D/Bone2D/Bone2D")
joint_data/4/rotate_from_joint = false
joint_data/4/enable_constraint = true
joint_data/4/constraint_angle_min = 0.0
joint_data/4/constraint_angle_max = -360.0
joint_data/4/constraint_angle_invert = false
joint_data/4/constraint_in_localspace = true
joint_data/4/editor_draw_gizmo = true

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_ps2bx"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DCCDIK_viafu")
modifications/1 = SubResource("SkeletonModification2DCCDIK_jhns6")

[sub_resource type="AtlasTexture" id="AtlasTexture_letig"]
atlas = ExtResource("2_at1yn")
region = Rect2(0, 0, 103, 109)

[sub_resource type="AtlasTexture" id="AtlasTexture_klpdf"]
atlas = ExtResource("2_at1yn")
region = Rect2(103, 0, 103, 109)

[sub_resource type="SpriteFrames" id="SpriteFrames_dvcfg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_letig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klpdf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qyisu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rj81m"]

[sub_resource type="Animation" id="Animation_a3o4o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-269, -102)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("right:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(507, 3)]
}

[sub_resource type="Animation" id="Animation_qumcr"]
resource_name = "left attack"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-269, -102), Vector2(-219, 151), Vector2(-28, 278), Vector2(-219, 151), Vector2(-269, -102)]
}

[sub_resource type="Animation" id="Animation_6i11g"]
resource_name = "many"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(760, -1), Vector2(146, -177), Vector2(560, 8), Vector2(291, 183), Vector2(-21, 307), Vector2(445, -25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-494, 13), Vector2(-22, 276), Vector2(-164, -64), Vector2(58, -335), Vector2(2, 490)]
}

[sub_resource type="Animation" id="Animation_in836"]
resource_name = "right attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.766667, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(507, 3), Vector2(25, 401), Vector2(-309, 2), Vector2(-171, -345), Vector2(617, 8)]
}

[sub_resource type="Animation" id="Animation_we53c"]
resource_name = "saw"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2, 0.4, 0.6, 0.8, 0.9, 0.933333, 1.1, 1.3, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(881, -3), Vector2(764, 4), Vector2(106, 419), Vector2(-563, 35), Vector2(86, -339), Vector2(524, -14), Vector2(881, -3), Vector2(764, 4), Vector2(106, 419), Vector2(-563, 35), Vector2(86, -339), Vector2(524, -14)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.2, 0.4, 0.6, 0.8, 0.933333, 1.1, 1.3, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-838, -7), Vector2(-94, 398), Vector2(458, 27), Vector2(-79, -425), Vector2(-728, -13), Vector2(-838, -7), Vector2(-94, 398), Vector2(458, 27), Vector2(-79, -425), Vector2(-728, -13)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_73aej"]
_data = {
"RESET": SubResource("Animation_a3o4o"),
"left attack": SubResource("Animation_qumcr"),
"many": SubResource("Animation_6i11g"),
"right attack": SubResource("Animation_in836"),
"saw": SubResource("Animation_we53c")
}

[node name="boss" type="CharacterBody2D"]
script = ExtResource("1_kgiha")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_pstal")
region_enabled = true
region_rect = Rect2(1834, 978, 262, 163)

[node name="tv" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8j0uy")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -5.5)
shape = SubResource("RectangleShape2D_kbpfx")

[node name="Skeleton2D" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_ps2bx")

[node name="right" type="Bone2D" parent="Skeleton2D"]
position = Vector2(90.945, 0)
rest = Transform2D(1, 0, 0, 1, 90.945, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm1" type="Sprite2D" parent="Skeleton2D/right"]
position = Vector2(44.2, 4)
texture = ExtResource("4_ji0jc")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/right"]
position = Vector2(81.565, 0)
rest = Transform2D(1, 0, 0, 1, 81.565, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm2" type="Sprite2D" parent="Skeleton2D/right/Bone2D"]
position = Vector2(19.915, 0)
texture = ExtResource("3_epk5v")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/right/Bone2D"]
position = Vector2(32.11, 0)
rest = Transform2D(1, 0, 0, 1, 32.11, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm1" type="Sprite2D" parent="Skeleton2D/right/Bone2D/Bone2D"]
position = Vector2(44.2, 4)
texture = ExtResource("4_ji0jc")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/right/Bone2D/Bone2D"]
position = Vector2(80.985, 0)
rest = Transform2D(1, 0, 0, 1, 80.985, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm2" type="Sprite2D" parent="Skeleton2D/right/Bone2D/Bone2D/Bone2D"]
position = Vector2(19.915, 0)
texture = ExtResource("3_epk5v")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/right/Bone2D/Bone2D/Bone2D"]
position = Vector2(107.475, 0)
rest = Transform2D(1, 0, 0, 1, 107.475, 0)
metadata/_local_pose_override_enabled_ = true

[node name="hand" type="AnimatedSprite2D" parent="Skeleton2D/right/Bone2D/Bone2D/Bone2D/Bone2D"]
sprite_frames = SubResource("SpriteFrames_dvcfg")
animation = &"idle"
flip_h = true

[node name="right" type="Area2D" parent="Skeleton2D/right/Bone2D/Bone2D/Bone2D/Bone2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/right/Bone2D/Bone2D/Bone2D/Bone2D/right"]
scale = Vector2(4.745, 4.745)
shape = SubResource("CircleShape2D_qyisu")

[node name="left" type="Bone2D" parent="Skeleton2D"]
position = Vector2(-97.1, 0)
rotation = -3.14159
rest = Transform2D(-1, -8.74228e-08, 8.74228e-08, -1, -97.1, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm1" type="Sprite2D" parent="Skeleton2D/left"]
position = Vector2(44.2, 4)
texture = ExtResource("4_ji0jc")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/left"]
position = Vector2(81.565, 0)
rest = Transform2D(1, 0, 0, 1, 81.565, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm2" type="Sprite2D" parent="Skeleton2D/left/Bone2D"]
position = Vector2(19.915, 0)
texture = ExtResource("3_epk5v")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/left/Bone2D"]
position = Vector2(32.11, 0)
rest = Transform2D(1, 0, 0, 1, 32.11, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm1" type="Sprite2D" parent="Skeleton2D/left/Bone2D/Bone2D"]
position = Vector2(44.2, 4)
texture = ExtResource("4_ji0jc")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/left/Bone2D/Bone2D"]
position = Vector2(80.985, 0)
rest = Transform2D(1, 0, 0, 1, 80.985, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Arm2" type="Sprite2D" parent="Skeleton2D/left/Bone2D/Bone2D/Bone2D"]
position = Vector2(19.915, 0)
texture = ExtResource("3_epk5v")

[node name="Bone2D" type="Bone2D" parent="Skeleton2D/left/Bone2D/Bone2D/Bone2D"]
position = Vector2(107.477, -0.000160217)
scale = Vector2(0.999957, 0.999957)
rest = Transform2D(1, 0, 0, 1, 107.475, 0)
metadata/_local_pose_override_enabled_ = true

[node name="hand" type="AnimatedSprite2D" parent="Skeleton2D/left/Bone2D/Bone2D/Bone2D/Bone2D"]
sprite_frames = SubResource("SpriteFrames_dvcfg")
animation = &"idle"
frame_progress = 0.999343
flip_h = true
flip_v = true

[node name="left" type="Area2D" parent="Skeleton2D/left/Bone2D/Bone2D/Bone2D/Bone2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/left/Bone2D/Bone2D/Bone2D/Bone2D/left"]
scale = Vector2(4.955, 4.955)
shape = SubResource("CircleShape2D_rj81m")

[node name="hands" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_73aej")
}

[node name="right" type="Node2D" parent="."]
position = Vector2(507, 3)

[node name="left" type="Node2D" parent="."]
position = Vector2(-269, -102)

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="Skeleton2D/right/Bone2D/Bone2D/Bone2D/Bone2D/right" to="." method="_on_right_body_entered"]
[connection signal="body_entered" from="Skeleton2D/left/Bone2D/Bone2D/Bone2D/Bone2D/left" to="." method="_on_left_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
